--- a/main.tex
+++ b/main.tex
@@ -26,27 +26,27 @@
 \def\confYear{2025}
 
 %%%%%%%%% TITLE - PLEASE UPDATE
-\title{\LaTeX\ Author Guidelines for \confName~Proceedings}
+\title{SAM-IAM: Segmenting Arbitrary Motion for Image Applications Model}
 
 %%%%%%%%% AUTHORS - PLEASE UPDATE
-\author{First Author\\
-Institution1\\
-Institution1 address\\
-{\tt\small firstauthor@i1.org}
+\author{Dominic Chui$^{\dagger}$\\
+Brown University
+\and Hancheng Lin$^{\dagger}$\\
+Brown University
+\and Gabrielle Shieh$^{\dagger}$\\
+Brown University
+\and Brian Xu$^{\dagger}$\\
+Brown University
 % For a paper whose authors are all at the same institution,
 % omit the following lines up until the closing ``}''.
 % Additional authors and addresses can be added with ``\and'',
 % just like the second author.
 % To save space, use either the email address or home page, not both
-\and
-Second Author\\
-Institution2\\
-First line of institution2 address\\
-{\tt\small secondauthor@i2.org}
 }
 
 \begin{document}
 \maketitle
+\footnote{$^{\dagger}$Equal contribution}
 \input{sec/0_abstract}
 \input{sec/1_intro}
 \input{sec/2_formatting}
